--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,12 @@
 [[endpoints]]
-listen = "0.0.0.0:20003"
+listen = "0.0.0.0:10000"
 remote = "dmit-hk.19931115.xyz:10000"
+[[endpoints]]
+listen = "0.0.0.0:10001"
+remote = "hkt.19931115.xyz:10000"
+[[endpoints]]
+listen = "0.0.0.0:10002"
+remote = "104.251.236.26:10000"
+[[endpoints]]
+listen = "0.0.0.0:10003"
+remote = "23.249.16.179:10000"
